--- a/unittest/Makefile
+++ b/unittest/Makefile
@@ -74,7 +74,11 @@ bin/output_tests:
 DYNAMIC_ANNOTATIONS_DIR=../dynamic_annotations
 DYNAMIC_ANNOTATIONS_H=${DYNAMIC_ANNOTATIONS_DIR}/dynamic_annotations.h
 DYNAMIC_ANNOTATIONS_C=${DYNAMIC_ANNOTATIONS_DIR}/dynamic_annotations.c
+ifndef EMPTY_DYNAMIC_ANNOTATIONS_IMPL
 DYNAMIC_ANNOTATIONS_O=$(BIN)dynamic_annotations-$(BUILD).$(OBJ)
+else
+DYNAMIC_ANNOTATIONS_O=
+endif
 DYNAMIC_ANNOTATIONS=${DYNAMIC_ANNOTATIONS_C} ${DYNAMIC_ANNOTATIONS_H}
 
 TEST_UTILS_O=$(BIN)test_utils-$(BUILD).$(OBJ)
