Prepend the "LLVM" prefix to dynamic annotations provided by the RTL. This helps to avoid name collisions between annotations within ThreadSanitizer and the client code.
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@2770 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/llvm/tsan_rtl/Makefile
+++ b/llvm/tsan_rtl/Makefile
@@ -27,7 +27,8 @@ FLAGS=-I. -Istlport -I../../third_party/stlport \
       -I$(TSAN_PATH) -I../../dynamic_annotations \
       -fno-exceptions -g -O2 \
       -D_STLP_NO_IOSTREAMS=1 -DTS_LLVM \
-      -DDYNAMIC_ANNOTATIONS_WANT_ATTRIBUTE_WEAK
+      -DDYNAMIC_ANNOTATIONS_WANT_ATTRIBUTE_WEAK \
+      -DDYNAMIC_ANNOTATIONS_PREFIX=LLVM
 
 FOREIGN_HEADERS=$(TSAN_PATH)/ts_lock.h $(TSAN_PATH)/ts_stats.h \
                 $(TSAN_PATH)/ts_heap_info.h $(TSAN_PATH)/ts_trace_info.h \
