--- a/tsan/Makefile
+++ b/tsan/Makefile
@@ -33,7 +33,7 @@ PIN_DEFINES=-DBIGARRAY_MULTIPLIER=1 -DUSING_XED  -DTARGET_$(PIN_ARCH2)  -DHOST_$
 PIN_INCLUDES=-I$(PIN_ROOT)/source/include -I$(PIN_ROOT)/source/include/gen -I$(PIN_ROOT)/extras/xed2-$(PIN_ARCH)/include
 PIN_LIBPATHS=-L$(PIN_ROOT)/extras/xed2-$(PIN_ARCH)/lib -L$(PIN_ROOT)/$(PIN_ARCH)/lib -L$(PIN_ROOT)/$(PIN_ARCH)/lib-ext
 PIN_LDFLAGS=-g -shared -Wl,-Bsymbolic -Wl,--version-script=$(PIN_ROOT)/source/include/pintool.ver
-PIN_LIBS= -lpin  -lxed -ldwarf -lelf -ldl -lpthread -liberty
+PIN_LIBS= -lpin  -lxed -ldwarf -lelf -ldl -lpthread
 
 DR_CXXFLAGS=-fPIC -fno-rtti -fno-stack-protector
 DR_DEFINES=-D$(DR_OS) -D$(DR_ARCH)
