--- a/llvm/opt/ThreadSanitizer/Makefile
+++ b/llvm/opt/ThreadSanitizer/Makefile
@@ -26,8 +26,7 @@
 CXX=g++
 
 ThreadSanitizer.so:	ThreadSanitizer.cpp
-	$(CXX) -c -fPIC -g ThreadSanitizer.cpp -o ThreadSanitizer.o -D__STDC_LIMIT_MACROS -D__STDC_CONSTANT_MACROS
-	#$(CXX) -shared -s ThreadSanitizer.o -o ThreadSanitizer.so
+	$(CXX) -c -O2 -fPIC -g ThreadSanitizer.cpp -o ThreadSanitizer.o -D__STDC_LIMIT_MACROS -D__STDC_CONSTANT_MACROS
 	$(CXX) -shared -g ThreadSanitizer.o -o ThreadSanitizer.so
 
 clean:
